src/hir/passes/snapshots/transmute__hir__passes__resolver__tests__resolve_ref_to_let_fn.snap
---
source: src/hir/passes/resolver.rs
expression: "XmlWriter::new(&hir).serialize()"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">x</ident>
      <ident id="ident:1">add</ident>
      <ident id="ident:2">boolean</ident>
      <ident id="ident:3">div</ident>
      <ident id="ident:4">eq</ident>
      <ident id="ident:5">ge</ident>
      <ident id="ident:6">gt</ident>
      <ident id="ident:7">le</ident>
      <ident id="ident:8">lt</ident>
      <ident id="ident:9">mul</ident>
      <ident id="ident:10">neg</ident>
      <ident id="ident:11">neq</ident>
      <ident id="ident:12">number</ident>
      <ident id="ident:13">sub</ident>
      <ident id="ident:14">void</ident>
    </identifiers>
    <stmt id="stmt:0" line="1" column="1" start="0" len="13">
      <fn>
        <identifier line="1" column="5" start="4" len="1">x</identifier>
        <parameters />
        <body line="1" column="11" start="10" len="3">
          <expr id="expr:0" line="1" column="11" start="10" len="3">
            <block />
          </expr>
        </body>
      </fn>
    </stmt>
    <stmt id="stmt:1" line="1" column="15" start="14" len="4">
      <expr id="expr:1" line="1" column="15" start="14" len="3">
        <call line="1" column="15" start="14" len="3" ident-ref="ident:0" name="x" target-id="stmt:0" />
      </expr>
    </stmt>
  </ast>
</unit>
